Issue #9 - REST service for game implemented and tested + Small corrections